# geminicode

./: .gemini_code_learning.db  .gitignore  CAPACIDADES_APRIMORADAS.md  COMO_USAR.md  Gemini Code.bat  INICIAR_SIMPLES.bat  INSTRUÇOES_TESTE_CORRIGIDO.md  LICENSE  ORGANIZACAO_COMPLETA.md  PLANO_EVOLUCAO_GEMINI_CODE.txt  README.md  cleanup.bat  gemini_repl.py  gemini_repl_launcher.py  main.py  pyproject.toml  relatorio_verificacao_completa.json  requirements-minimal.txt  requirements.txt  setup.py  test_complete_system.py  test_complete_system_integration.py  test_critical_improvements.py  test_sistema_completo_pos_correcoes.py  verificacao_completa_sistema.py
.claude/: settings.local.json
.gemini_code/: config.yaml  history.txt  kpis.json  project_memory.json  team.json
.gemini_code/execution_reports/: execution_report_20250603_070956.json  execution_report_20250603_071257.json  execution_report_20250603_071622.json  execution_report_20250603_071815.json  execution_report_20250603_072035.json  execution_report_20250603_072518.json  execution_report_20250603_072555.json  execution_report_20250603_075058.json  execution_report_20250603_075233.json  execution_report_20250603_075307.json
.gemini_code/memory/: memory.db
.gemini_code/permissions/: permissions.db
.gemini_code/sessions/: sessions.db
.gemini_code/tool_logs/: tools_20250603.json
docs/: CORRECOES_IMPLEMENTADAS.md  FIXES_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  MELHORIAS_IMPLEMENTADAS_FINAL.md
docs/analysis/: ANALISE_PARIDADE_CLAUDE_CODE.txt
docs/reports/: RELATORIO_MELHORIAS_100_PERFEITO.md
gemini_code/: __init__.py
gemini_code/advanced/: __init__.py  context_compactor.py
gemini_code/analysis/: __init__.py  code_navigator.py  error_detector.py  health_monitor.py  performance.py  (+1 more)
tests/: __init__.py  run_tests.py  test_100_percent_execution.py  test_100_percent_verification.py  test_all_improvements.py  test_async_debug.py  test_complete_system.py  test_complete_system_integration.py  test_conversation_manager.py  test_critical_capabilities.py  test_critical_improvements.py  test_gemini_code_real_world.py  test_improvements.py  test_integration_comprehensive.py  test_memory_system.py  test_nlp_enhanced.py  test_quick_system_check.py  test_real_execution_verification.py  test_refactored_health_monitor.py  test_repl_functionality.py  test_simple_debug.py  test_simple_execution.py  test_system_execution_complete.py  test_system_functionality.py  test_system_ready.py  test_ultimate_stress_supreme.py  test_ultra_complex_mega_system.py  test_ultra_complex_mega_system_safe.py  test_ultra_comprehensive.py
(+101 files in other folders)
